[package]
authors = ["olliemath <oliver@suade.org>"]
categories = ["date-and-time"]
description = "Powerful extensions to rust's Chrono crate"
edition = "2018"
exclude = [".github/*"]
keywords = ["date", "time", "calendar"]
license = "MIT"
name = "chronoutil"
readme = "README.md"
repository = "https://github.com/olliemath/chronoutil"
version = "0.1.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
"chrono" = "^0.4"
