[package]
authors = ["olliemath <oliver@suade.org>"]
categories = ["date-and-time"]
description = "Powerful extensions to rust's Chrono crate"
edition = "2018"
exclude = [".github/*"]
keywords = ["date", "time", "calendar"]
license = "MIT"
name = "chronoutil"
readme = "README.md"
repository = "https://github.com/olliemath/chronoutil"
version = "0.2.5"

[dependencies]
"chrono" = { version = "^0.4.24", default-features = false }

[dev-dependencies]
criterion = "0.3"
chrono-tz = "0.8.3"

[[bench]]
name = "delta"
harness = false
